--- a/package.xml
+++ b/package.xml
@@ -4,15 +4,19 @@
 <package>
   <name>Net_Portscan</name>
   <summary>Portscanner utilities.</summary>
-  <maintainer>
+  <license>PHP 2.02</license>
+  <maintainers>
+   <maintainer>
     <user>MJ</user>
     <name>Martin Jansen</name>
     <email>mj@php.net</email>
-  </maintainer>
-
+    <role>lead</role>
+   </maintainer>
+  </maintainers>
   <release>
     <version>1.0</version>
     <date>2001-11-15</date>
+    <state>stable</state>
     <notes>
      This is the first stable release.
     </notes>
