--- a/package.xml
+++ b/package.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="ISO-8859-1" ?>
+<!DOCTYPE package SYSTEM "../package.dtd">
 <!-- do not use the "Type" attribute here, that one is only for
      generated package.xml files -->
-<package>
+<package version="1.0">
   <name>Net_Portscan</name>
   <summary>Portscanner utilities.</summary>
   <license>PHP 2.02</license>
   <maintainers>
-   <maintainer>
-    <user>MJ</user>
-    <name>Martin Jansen</name>
-    <email>mj@php.net</email>
-    <role>lead</role>
-   </maintainer>
+    <maintainer>
+      <user>MJ</user>
+      <name>Martin Jansen</name>
+      <email>mj@php.net</email>
+      <role>lead</role>
+    </maintainer>
   </maintainers>
   <release>
     <version>1.0</version>
@@ -20,13 +21,13 @@
     <notes>
      This is the first stable release.
     </notes>
-  </release>
 
-  <filelist>
-    <dir name="/" baseinstalldir="Net_Portscan">
+    <filelist>
+      <dir name="/" baseinstalldir="Net_Portscan">
         <file role="php">Portscan.php</file>
         <file role="php">test.php</file>
-        <file role="text">README</file>
-    </dir>
-  </filelist>
+        <file role="doc">README</file>
+      </dir>
+    </filelist>
+  </release>
 </package>
