* Adapt to the new layout.
git-svn-id: http://svn.php.net/repository/pear/packages/Net_Portscan/trunk@77303 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/package.xml
+++ b/package.xml
@@ -24,9 +24,9 @@
 
     <filelist>
       <dir name="/" baseinstalldir="Net_Portscan">
-        <file role="php">Portscan.php</file>
-        <file role="php">test.php</file>
-        <file role="doc">README</file>
+        <file role="php" name="Portscan.php" />
+        <file role="php" name="test.php" />
+        <file role="doc" name="README" /></file>
       </dir>
     </filelist>
   </release>
