--- a/package.xml
+++ b/package.xml
@@ -3,59 +3,77 @@
 <!-- do not use the "Type" attribute here, that one is only for
      generated package.xml files -->
 <package version="1.0">
-  <name>Net_Portscan</name>
-  <summary>Portscanner utilities.</summary>
-  <description>
+ <name>Net_Portscan</name>
+ <summary>Portscanner utilities.</summary>
+ <description>
 The Net_Portscan package allows one to perform basic portscanning
 functions with PHP. It supports checking an individual port or
 checking a whole range of ports on a machine.
-  </description>
-  <license>PHP 2.02</license>
-  <maintainers>
-    <maintainer>
-      <user>MJ</user>
-      <name>Martin Jansen</name>
-      <email>mj@php.net</email>
-      <role>lead</role>
-    </maintainer>
-  </maintainers>
+ </description>
+ <license>PHP 2.02</license>
+ <maintainers>
+  <maintainer>
+   <user>MJ</user>
+   <name>Martin Jansen</name>
+   <email>mj@php.net</email>
+   <role>lead</role>
+  </maintainer>
+ </maintainers>
 
+ <release>
+  <version>1.0.2</version>
+  <date>2003-04-03</date>
+  <state>stable</state>
+  <notes>
+This version now closes socket connections immediately after having
+opened them, instead of waiting for PHP to do this at the end of the
+script execution. (#23161)
+  </notes>
+  <filelist>
+   <dir name="/" baseinstalldir="Net">
+    <file role="php" name="Portscan.php" />
+    <file role="doc" name="README.portscan" />
+    <dir name="tests">
+     <file role="php" name="01-portscan.php" />
+    </dir>
+   </dir>
+  </filelist>
+ </release>
+
+ <changelog>
   <release>
-    <version>1.0.1</version>
-    <date>2002-04-09</date>
-    <state>stable</state>
-    <notes>
-     This is a maintenance release to reflect some updates to the
-     directory structure.
-    </notes>
-
-    <filelist>
-      <dir name="/" baseinstalldir="Net">
-        <file role="php" name="Portscan.php" />
-        <file role="doc" name="README.portscan" />
-        <dir name="tests">
-         <file role="php" name="01-portscan.php" />
-        </dir>
-      </dir>
-    </filelist>
+   <version>1.0.1</version>
+   <date>2002-04-09</date>
+   <state>stable</state>
+   <notes>
+This is a maintenance release to reflect some updates to the directory
+structure.
+   </notes>
+   <filelist>
+    <dir name="/" baseinstalldir="Net">
+     <file role="php" name="Portscan.php" />
+     <file role="doc" name="README.portscan" />
+     <dir name="tests">
+      <file role="php" name="01-portscan.php" />
+     </dir>
+    </dir>
+   </filelist>
   </release>
 
-  <changelog>
-    <release>
-      <version>1.0</version>
-      <date>2001-11-15</date>
-      <state>stable</state>
-      <notes>This is the first stable release.</notes>
+  <release>
+   <version>1.0</version>
+   <date>2001-11-15</date>
+   <state>stable</state>
+   <notes>This is the first stable release.</notes>
 
-      <filelist>
-	<dir name="/" baseinstalldir="Net">
-	  <file role="php" name="Portscan.php" />
-	  <file role="php" name="test.php" />
-	  <file role="doc" name="README" />
-	</dir>
-      </filelist>
-    </release>
-  </changelog>
-
+   <filelist>
+    <dir name="/" baseinstalldir="Net">
+	 <file role="php" name="Portscan.php" />
+	 <file role="php" name="test.php" />
+	 <file role="doc" name="README" />
+    </dir>
+   </filelist>
+  </release>
+ </changelog>
 
 </package>
